--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "env-var": "^7.3.0",
     "express": "^4.18.2",
+    "nestjs-typeorm-paginate": "^4.0.2",
     "pg": "^8.8.0",
     "typeorm": "^0.3.10"
   },
